--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
 
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="450dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layoutDirection="locale"
-    android:layout_marginTop="100dp"
-    android:layout_marginBottom="100dp"
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
     android:background="@drawable/rounded_corner_theme_bg"
 
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
+            android:layout_alignParentTop="true"
             android:layoutDirection="locale"
-            >
+            android:layout_above="@+id/layoutDots"
+            android:layout_marginBottom="70dp">
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
@@ -31,19 +26,18 @@
                 android:visibility="visible"
 
                 />
-            <LinearLayout
-                android:id="@+id/layoutDots"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="-60dp"
-                android:gravity="center"
-                android:layout_marginBottom="10dp"
-                android:layout_marginHorizontal="10dp"
-                android:orientation="horizontal"/>
         </LinearLayout>
-    </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/layoutDots"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
 
-    </LinearLayout>
+        android:orientation="horizontal"/>
+
+    </RelativeLayout>
 
