--- a/app/src/main/res/layout-xhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xhdpi/activity_login.xml
@@ -34,12 +34,12 @@
             app:layout_constraintVertical_bias="0.0" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="600dp"
+            android:layout_height="500dp"
             android:elevation="1dp"
             android:background="@color/transparent"
             android:gravity="bottom|center"
             android:id="@+id/splashLogoLayout"
-            android:layout_marginBottom="-601dp"
+            android:layout_marginBottom="-501dp"
             android:layout_gravity="center_horizontal"
             >
             <ImageView
@@ -212,7 +212,8 @@
                         android:layout_height="50dp"
                         android:layout_gravity="center"
                         android:id="@+id/dubaiLogo"
-                        android:padding="2dp"
+
+                        android:padding="5dp"
                         android:src="@drawable/dmlogo" />
 
                     <ImageView
@@ -689,6 +690,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
+                android:layout_marginTop="8dp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
