--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none"
+            android:listSelector="#03000000"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="45dp"
